--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
       }
   },
   "include": [
-      "src/**/*"
-  ]
+      "src/**/*",
+"routes/FileSubmitRouter.js", "routes/WoocomUser.js" ,
+ ],
 }
