--- a/package.json
+++ b/package.json
@@ -20,17 +20,20 @@
     "body-parser": "^1.19.0",
     "btoa": "^1.2.1",
     "cors": "^2.8.5",
+    "csvtojson": "^2.0.10",
     "dotenv": "^10.0.0",
-    "express": "^4.17.1",
+    "express": "^4.18.1",
+    "express-fileupload": "^1.4.0",
     "form-urlencoded": "^6.0.4",
     "fs": "^0.0.1-security",
-    "googleapis": "^84.0.0",
+    "googleapis": "^39.2.0",
     "helmet": "^4.6.0",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb-client-encryption": "^2.0.0-beta.2",
     "mongoose": "^5.13.3",
     "morgan": "^1.10.0",
-    "multer": "^1.4.3",
+    "multer": "^1.4.4",
     "netlify-lambda": "^1.4.3",
     "node-fetch": "^2.6.1",
     "path": "^0.12.7",
